java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/resolve/pkg1/package-info.java
/**
 * {@linkplain #<error descr="Cannot resolve symbol 'foo'">foo</error>}
 * @see <error descr="Cannot resolve symbol 'List'">List</error>
 * @author #mycompanyname
 */
package mycompanypackagename;